--- a/app/src/main/res/layout/fragment_ip.xml
+++ b/app/src/main/res/layout/fragment_ip.xml
@@ -2,12 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.maomao.rxjavademo.MainActivity">
+    android:layout_height="match_parent">
 
  <LinearLayout
      android:layout_alignParentTop="true"
-     android:layout_marginTop="20dp"
+     android:layout_marginTop="10dp"
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:id="@+id/linear"
